namespace Murder.DomainGame.GameAggregate;

public class Game
{

}