namespace Murder.DomainGame.GameAggregate;

internal class MurderChain
{

}