namespace Murder.DomainGame;

public class GameFactory
{

}