namespace Murder.DomainGame;

public record struct GameId
{
}