namespace Murder.DomainGame;

public interface GameRepository
{
}