namespace Murder.DomainGame;

public enum GameState
{
    Pending,
    Running,
    Ended,
}