namespace Murder.DomainGame;

public class Player { }