namespace Murder.DomainGame;

public record struct PlayerId { }