namespace Murder.DomainGame;

public enum Visibility
{
    Public,
    Private,
}