namespace Murder.DomainIdentity;

public readonly record struct CredentialId(string Id);