namespace Murder.DomainIdentity;

public class Guest(IdentityId id, string name) : Identity(id, name)
{
}