namespace Murder.DomainIdentity;

public readonly record struct IdentityId(string Id);