namespace Murder.DomainIdentity;

public enum UserState
{
    Active,
    Deleted
}