@startuml Murder UML
skinparam DefaultFontName Times New Roman

namespace Infrastructure {
    namespace Application {

        class GameService <<application service>> {
            -repository : GameRepository

            +listJoinedGames(PlayerId): GameId[]
            +listPublicGames(): GameId[]
            +getGame(GameId): GameDTO
            +joinGame(GameId, PlayerId): void
            +leaveGame(GameId, PlayerId): void
            +startGame(GameId, EndDate?): void
            +endGame(GameId): void
            +createGame(string, PlayerId, Visibility): GameId
            +renameGame(GameId, string) : void
            +describeGame(GameId, string) : void
            +changeEnd(GameId, DateTime) : void
            +deleteGame(GameId): void
            +killOf(PlayerId) : PlayerId
            +kill(PlayerId, PlayerId) : PlayerId
            +leaderboard(GameId) : HashMap<PlayerId, int>
            +participants(GameId) : PlayerId[]
        }

        class GameDTO <<value object>> {
            +id : GameId
            +name : String
            +description : String?
            +visibility : Visibility
            +startTime : DateTime?
            +endTime : EndTime?
            +admin : PlayerId
            +participants : PlayerId[]
            +gameState : GameState
        }

        class IdentityService <<application service>> {
            +getIdentity(IdentityId): Identity
            +isUser(IdentityId): bool
            +isGuest(IdentityId): bool
            +createUser(string): IdentityId
            +createGuest(): IdentityId
            +deactivateUser(IdentityId): void
        }

        class AuthenticationService <<application service>> {
            -authenticator : Authenticator
            -credentialRepo : CredentialRepository

            +authenticate(IncomingCredential): IdentityId
            +revokeCredential(CredentialId): void
            +addMethod(IdentityId, MethodName, EnrollmentData?): EnrollmentResult
            +removeMethod(IdentityId, MethodName): void
        }

        GameDomain.PlayerId .. IdentityDomain.IdentityId : context mapping

        GameService ..> GameDomain.GameRepository : uses
        GameService ..> GameDomain.GameFactory : delegates creation to
        GameService ..> GameDomain.GameAggregate.Game : uses
        GameService ..> GameDTO : returns

        IdentityService ..> IdentityDomain.IdentityRepository : uses
        IdentityService ..> IdentityDomain.User : creates
        IdentityService ..> IdentityDomain.Guest : creates

        AuthenticationService ..> IdentityDomain.Authenticator : delegates to
        AuthenticationService ..> IdentityDomain.CredentialRepository : uses

        namespace GameDomain {
            interface GameRepository <<repository>> {
                +findGameById(GameId): Game?
                +findPlayerById(PlayerId): Player?
                +listPublic(): GameId[]
                +store(Game): void
                +update(Game): void
                +delete(GameId): void
                +existsGame(GameId): bool
                +existsPlayer(PlayerId) : bool
            }

            class Player <<entity>> {
                +id : PlayerId
                +games : GameId[]
            }

            class GameAggregate.MurderChain <<value object>> {
                -chain : LinkedList<PlayerId>

                ~killOf(PlayerId) : PlayerId
                ~kill(PLayerId, PlayerId) : PlayerId
                ~leaderboard() : HashMap<PlayerId, int>
                ~participants() : PlayerId[]
            }

            class GameAggregate.Game <<entity, aggregate root>> {
                -murderChain: MurderChain
                +id : GameId
                +name : String
                +description : String?
                +visibility: Visibility
                +startTime: DateTime?
                +endTime: DateTime?
                +admin: PlayerId

                +killOf(PlayerId) : PlayerId
                +kill(PLayerId, PlayerId) : PlayerId
                +leaderboard() : HashMap<PlayerId, int>
                +participants() : PlayerId[]
                +start() : void
                +end() : void
                +state() : GameState
            }

            enum GameState <<value object>> {
                Pending
                Running
                Ended
            }

            class GameFactory <<factory>> {
                +create(string, []PlayerId, PlayerId, Visibility, DateTime, DateTime?) : Game
            }


            class GameId <<value object>> {
                - id: string
            }

            class PlayerId <<value object>> {
                - id: string
            }

            enum Visibility <<value object>> {
                Public
                Private
            }

            GameAggregate.Game --* GameAggregate.MurderChain : contains
            GameFactory --> GameAggregate.Game : creates
            GameAggregate.Game --* Visibility : contains
            GameAggregate.Game --* GameState : contains
            GameAggregate.MurderChain --* PlayerId : contains many
            GameAggregate.Game --* PlayerId : contains
            GameAggregate.Game --* GameId : identified by
            GameRepository --o GameAggregate.Game : stores
            GameRepository --o Player : stores
            GameRepository ..> GameId : uses
            GameRepository ..> PlayerId : uses
            Player --* PlayerId : identified by
        }

        namespace IdentityDomain {
            interface Identity <<entity>> {
                +id : IdentityId
                +name : string
            }

            interface IdentityRepository <<repository>> {
                +identityById(IdentityId) : Identity
                +identityOfName(string) : IdentityId
                +store(Identity) : void
                +update(Identity) : void
                +delete(IdentityId) : void
            }

            interface CredentialRepository <<repository>> {
                +store(IdentityId, StoredCredential): CredentialId
                +findById(CredentialId): (IdentityId, StoredCredential)?
                +findAll(IdentityId, MethodName): CredentialId[]
                +delete(CredentialId): void
                +deleteAll(IdentityId, MethodName): void
                +exists(CredentialId): bool
            }

            class IdentityId <<value object>> {
                -id : string
            }

            note right of User
                The difference between a
                User and Guest is that
                Users have a custom name
                while Guest receive a
                generated name. Also the
                infrastructure layer may
                assign a Guest to only a
                single Game and only use
                a session cookie as
                authentication method.
            end note
            class User <<entity>> implements Identity {
                +state : UserState

                construct(string) : User
            }

            class Guest <<entity>> implements Identity {
                construct() : Guest
            }

            enum UserState <<value object>> {
                Active
                Deleted
            }

            interface IncomingCredential <<port>> {
                +methodName : MethodName
            }

            interface StoredCredential <<port>> {
                +methodName : MethodName
            }

            interface EnrollmentData <<port>> {
                +methodName : MethodName
            }

            class EnrollmentResult <<value object>> {
                +credential : StoredCredential?
                +displayData : string?
            }

            note right of EnrollmentResult
                credential is null for stateless methods (e.g. JWT).
                displayData carries secrets that must be shown
                to the user exactly once (e.g. generated API key).
            end note

            class MethodName <<value object>> {
                +type: string
            }

            class CredentialId <<value object>> {
                -id: string
            }

            interface AuthenticationMethod <<port>> {
                +methodName : MethodName
                +authenticate(IncomingCredential): IdentityId?
                +enroll(EnrollmentData?): EnrollmentResult
            }

            note right of AuthenticationMethod
                authenticate() handles the full authentication flow:
                resolve identity + verify credential.
                Implementations are infrastructure adapters
                that may have injected dependencies such as the CredentialRepository.
            end note

            class Authenticator <<domain service>> {
                -methods : HashMap<MethodName, AuthenticationMethod>
                +authenticate(IncomingCredential): IdentityId
            }

            User --* UserState : contains
            IdentityRepository --o Identity : stores
            Identity --* IdentityId : identified by
            Authenticator --o AuthenticationMethod : delegates to
            AuthenticationMethod --* MethodName : contains
            EnrollmentResult --* StoredCredential : contains
            EnrollmentData --* MethodName : contains
            CredentialRepository ..> StoredCredential : stores
            StoredCredential --* MethodName : contains
            IncomingCredential --* MethodName : contains
            EnrollmentResult --* StoredCredential : may contain
            CredentialId --> StoredCredential : identifies
        }
    }
}

@enduml